# Ivyline_Sector_Modeling

./: README.md  pyproject.toml  requirements.txt
db/: Equity Selection.xlsx
src/: main.py
src/models/: equity.py
src/services/: dashboard.py  data_loader.py
