[tool.poetry]
name = "ivyline_sector_modelling"
version = "0.1.0"
description = ""
authors = ["AJ <naqibprio10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.70"
plotly = "^5.7.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
chart-studio = "^1.1.0"
dash = "^2.3.1"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
